--- a/universe.styl
+++ b/universe.styl
@@ -1,19 +1,31 @@
-.pdf
-  body
-    background: white
-
 body
-  background: black
+  background black
 
 .bespoke-parent
+  background #000
   color black
 
 .bespoke-slide
   background #fff
+  background-image url('../images/logo.png')
+  background-position 99% 98.25%
+  background-repeat no-repeat
+  background-size 18%
 
 h1
-  font-family 'Gill Sans'
-  margin-bottom -2px
+  font-family 'Gill Sans', 'Gill Sans MT', 'sans-serif'
+
+
+h1:after
+  border: 3px solid #000;
+  border-left: none;
+  border-right: none;
+  display: flex;
+  content: '';
+  height: 2px;
+  margin-top: 3px;
+  width: 660px;
+  margin-left: -14px;
 
 table
   border-bottom: dotted 1px #e3e5e8
@@ -32,7 +44,7 @@ a, a:visited, a:active, a:link
   color: #74a723
 
 
-.lang-sh, .lang-bash
+.language-sh, .language-bash
   outline 1px solid cream
 
 
@@ -44,10 +56,7 @@ pre.language-javascript
   border 1px solid #861001
 
 
-code.lang-sh, code.lang-bash
+code.language-sh, code.language-bash
   background #022550
   color #dddee0
   border 1px solid #1167bd
-
-ul li:first-child, ul li li:first-child, ol li:first-child, ol li li:first-child
-  margin-top: 20px
