--- a/universe.styl
+++ b/universe.styl
@@ -58,5 +58,12 @@ pre.language-javascript
 
 code.language-sh, code.language-bash
   background #022550
-  color #dddee0
+  color white
   border 1px solid #1167bd
+
+pre[class*="language-"]
+  padding: 0.03em
+  text-shadow: none
+  span
+    text-shadow: none
+
