--- a/universe.styl
+++ b/universe.styl
@@ -13,7 +13,7 @@ body
   background-size 18%
 
 h1
-  font-family 'Gill Sans', 'Gill Sans MT', 'sans-serif'
+  font-family: 'Gill Sans', 'Verdanda', sans-serif;
 
 
 h1:after
